<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CV01SecuenciaOperacion">

    <Button
        android:id="@+id/id_button_simular"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_simular_transferir"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/id_button_aceptar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_aceptar_transferir"
        app:layout_constraintTop_toBottomOf="@+id/id_button_simular"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/id_button_completar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btn_completar_transferir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_button_aceptar" />

    <Button
        android:id="@+id/id_button_query_by_id"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btn_consulta_tranferir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_button_completar" />

    <Button
        android:id="@+id/id_button_query_last_moviment"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="5dp"
        android:text="@string/btn_consulta_all_tranferir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_button_query_by_id" />
</androidx.constraintlayout.widget.ConstraintLayout>