<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CV02SimularOperacion">


    <Button
        android:id="@+id/id_btn_simular_transferencia"
        android:layout_width="409dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:text="@string/btn_simular_transferir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_et_referencia_ordenante" />

    <EditText
        android:id="@+id/id_et_moneda_cuenta_origen"
        android:layout_width="409dp"
        android:layout_height="35dp"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_moneda_cuenta_origen"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/id_et_referencia_ordenante"
        android:layout_width="409dp"
        android:layout_height="35dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_referencia_ordenante" />

    <EditText
        android:id="@+id/id_et_numero_cuenta_beneficiario"
        android:layout_width="409dp"
        android:layout_height="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_numero_cuenta_beneficiario" />

    <EditText
        android:id="@+id/id_et_importe_transferir"
        android:layout_width="409dp"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_importe_transferir"
        tools:layout_editor_absoluteX="1dp" />

    <EditText
        android:id="@+id/id_et_numero_cuenta_origen"
        android:layout_width="409dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_numero_cuenta_origen" />

    <EditText
        android:id="@+id/id_et_nombre_beneficiario"
        android:layout_width="409dp"
        android:layout_height="30dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_nombre_beneficiario" />

    <TextView
        android:id="@+id/id_tv_numero_cuenta_origen"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_numero_cuenta_origen"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/id_tv_numero_cuenta_beneficiario"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_numero_cuenta_beneficiario"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_et_nombre_beneficiario" />

    <TextView
        android:id="@+id/id_tv_importe_transferir"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_importe_transferir"
        android:textColor="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@+id/id_et_moneda_cuenta_origen"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/id_tv_referencia_ordenante"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_referencia_origen"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_et_numero_cuenta_beneficiario" />

    <TextView
        android:id="@+id/id_tv_nombre_beneficiario"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_nombre_beneficiario"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_et_importe_transferir" />

    <TextView
        android:id="@+id/id_tv_moneda_cuenta_origen"
        android:layout_width="409dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/tv_moneda_cuenta_origen"
        android:textColor="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@+id/id_et_numero_cuenta_origen"
        tools:layout_editor_absoluteX="1dp" />


</androidx.constraintlayout.widget.ConstraintLayout>