<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CV05ConsultaTargetTransfer">


    <TextView
        android:id="@+id/id_tv_target_number_transfer"
        android:layout_width="match_parent"
        android:layout_height="18dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_target_number_transfer"
        android:textColor="@color/colorBlue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/id_et_target_number_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/id_tv_target_number_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_target_number_transfer" />

    <TextView
        android:id="@+id/id_tv_target_date_transfer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_target_date_transfer"
        android:textColor="@color/colorBlue"
        app:layout_constraintStart_toStartOf="@+id/id_et_target_number_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_et_target_number_transfer" />

    <EditText
        android:id="@+id/id_et_target_date_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/id_tv_target_date_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_target_date_transfer" />

    <TextView
        android:id="@+id/id_tv_target_hour_transfer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:text="@string/tv_target_hour_transfer"
        android:textColor="@color/colorBlue"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/id_et_target_date_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_et_target_date_transfer" />

    <EditText
        android:id="@+id/id_et_target_hour_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="datetime"
        app:layout_constraintStart_toStartOf="@+id/id_tv_target_hour_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_target_hour_transfer" />

    <TextView
        android:id="@+id/id_tv_target_money_transfer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_target_money_transfer"
        android:textColor="@color/colorBlue"
        app:layout_constraintStart_toStartOf="@+id/id_et_target_hour_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_et_target_hour_transfer" />

    <EditText
        android:id="@+id/id_et_target_money_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/id_tv_target_money_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_target_money_transfer" />

    <TextView
        android:id="@+id/id_tv_target_amount_transfer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/tv_target_amount_transfer"
        android:textColor="@color/colorBlue"
        app:layout_constraintStart_toStartOf="@+id/id_et_target_money_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_et_target_money_transfer" />

    <EditText
        android:id="@+id/id_et_target_amount_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/id_tv_target_amount_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_target_amount_transfer" />

    <TextView
        android:id="@+id/id_tv_target_reference_transfer"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorBlue"
        android:text="@string/tv_target_reference_transfer"
        app:layout_constraintStart_toStartOf="@+id/id_et_target_amount_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_et_target_amount_transfer" />

    <EditText
        android:id="@+id/id_et_target_reference_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:inputType="textMultiLine"
        app:layout_constraintStart_toStartOf="@+id/id_tv_target_reference_transfer"
        app:layout_constraintTop_toBottomOf="@+id/id_tv_target_reference_transfer" />


</androidx.constraintlayout.widget.ConstraintLayout>